Opened 13 years ago
Closed 13 years ago
#8287 closed bug (fixed)
Debugger Variables list not always in view
Reported by: | yourpalal | Owned by: | anevilyak |
---|---|---|---|
Priority: | low | Milestone: | Unscheduled |
Component: | Applications/Debugger | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This bug is pretty easy to reproduce:
1) Debug something 2) expand a bunch of stuff in the variables list and scroll to the bottom (the scrolling is essential) 3) step into a function
At this point, there will be nothing visible in the Variables list. You can however, scroll up to find the appropriate variables.
Change History (3)
comment:1 by , 13 years ago
comment:2 by , 13 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Note:
See TracTickets
for help on using tickets.
I believe that's actually a bug in BColumnListView.