Fix scrollbar handling when removing rows in BCLV.

- If removing a row results in there no longer being any rows whatsoever
  visible, force a scroll back into the visible range. Fixes #8287.